--- a/archives/toutiao-search/2024-03-18.md
+++ b/archives/toutiao-search/2024-03-18.md
@@ -1,63 +1,81 @@
 # 2024-03-18
 
-共 91 条
+共 108 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Mar 18 2024 07:00:37 GMT+0800 (China Standard Time) -->
-1. [特朗普发出新威胁指向中国电动汽车](https://so.toutiao.com/search?keyword=特朗普发出新威胁指向中国电动汽车)
-1. [7名大学生持铁棍追打中学生已被抓](https://so.toutiao.com/search?keyword=7名大学生持铁棍追打中学生已被抓)
+<!-- 最后更新时间 Mon Mar 18 2024 08:26:31 GMT+0800 (China Standard Time) -->
+1. [普京当选俄总统](https://so.toutiao.com/search?keyword=普京当选俄总统)
+1. [网传邯郸初中生遇害案颅骨照片不实](https://so.toutiao.com/search?keyword=网传邯郸初中生遇害案颅骨照片不实)
 1. [穿越花海奔赴一场春天的约会](https://so.toutiao.com/search?keyword=穿越花海奔赴一场春天的约会)
+1. [普京称将在新任期继续推动国家发展](https://so.toutiao.com/search?keyword=普京称将在新任期继续推动国家发展)
+1. [13岁男生猥亵女生被送专门学校训诫](https://so.toutiao.com/search?keyword=13岁男生猥亵女生被送专门学校训诫)
 1. [凯特王妃去向不明 各方回应引猜测](https://so.toutiao.com/search?keyword=凯特王妃去向不明+各方回应引猜测)
-1. [淀粉肠商家直播2小时吃10根淀粉肠](https://so.toutiao.com/search?keyword=淀粉肠商家直播2小时吃10根淀粉肠)
+1. [多家厂商否认淀粉肠使用骨泥](https://so.toutiao.com/search?keyword=多家厂商否认淀粉肠使用骨泥)
+1. [特朗普发出新威胁指向中国电动汽车](https://so.toutiao.com/search?keyword=特朗普发出新威胁指向中国电动汽车)
+1. [国内油价调整大概率搁浅](https://so.toutiao.com/search?keyword=国内油价调整大概率搁浅)
+1. [商家直播2小时吃10根淀粉肠](https://so.toutiao.com/search?keyword=商家直播2小时吃10根淀粉肠)
+1. [洪金宝怒怼说成龙老的网友](https://so.toutiao.com/search?keyword=洪金宝怒怼说成龙老的网友)
+1. [武汉赏樱点否认提供梯子拍照](https://so.toutiao.com/search?keyword=武汉赏樱点否认提供梯子拍照)
+1. [联合国前官员称从小被教育要憎恨中国](https://so.toutiao.com/search?keyword=联合国前官员称从小被教育要憎恨中国)
 1. [特朗普：我败选对美来说是大屠杀](https://so.toutiao.com/search?keyword=特朗普：我败选对美来说是大屠杀)
+1. [联合国批俄在乌东等地举行大选投票](https://so.toutiao.com/search?keyword=联合国批俄在乌东等地举行大选投票)
+1. [钧评：美用SpaceX建间谍网威胁世界](https://so.toutiao.com/search?keyword=钧评：美用SpaceX建间谍网威胁世界)
+1. [老婆想穿小裙子 老公默默擦2小时鞋](https://so.toutiao.com/search?keyword=老婆想穿小裙子+老公默默擦2小时鞋)
+1. [媒体：樊振东看演唱会有何不可](https://so.toutiao.com/search?keyword=媒体：樊振东看演唱会有何不可)
+1. [4男女混租3个月后留满屋垃圾](https://so.toutiao.com/search?keyword=4男女混租3个月后留满屋垃圾)
+1. [央媒评淀粉肠塌房](https://so.toutiao.com/search?keyword=央媒评淀粉肠塌房)
+1. [孔子第76代孙孔令奇求婚成功](https://so.toutiao.com/search?keyword=孔子第76代孙孔令奇求婚成功)
+1. [新能源车行驶途中突起火被消防扑灭](https://so.toutiao.com/search?keyword=新能源车行驶途中突起火被消防扑灭)
+1. [笔口罩水杯是怎么变成作弊神器的](https://so.toutiao.com/search?keyword=笔口罩水杯是怎么变成作弊神器的)
+1. [内蒙古一公安局副局长因公牺牲](https://so.toutiao.com/search?keyword=内蒙古一公安局副局长因公牺牲)
+1. [用劣质槽头肉企业负责人道歉](https://so.toutiao.com/search?keyword=用劣质槽头肉企业负责人道歉)
+1. [男子获理赔后又将病死牛挖出来卖](https://so.toutiao.com/search?keyword=男子获理赔后又将病死牛挖出来卖)
+1. [老人出摊卖淀粉肠无人问津](https://so.toutiao.com/search?keyword=老人出摊卖淀粉肠无人问津)
+1. [货车超载500%以上 蛇形走位后侧翻](https://so.toutiao.com/search?keyword=货车超载500%以上+蛇形走位后侧翻)
+1. [特朗普：乌克兰必须是一个小骰子](https://so.toutiao.com/search?keyword=特朗普：乌克兰必须是一个小骰子)
+1. [淀粉肠摊主称周围同行只剩一两家](https://so.toutiao.com/search?keyword=淀粉肠摊主称周围同行只剩一两家)
+1. [法媒：马克龙为何从鸽派变为鹰派](https://so.toutiao.com/search?keyword=法媒：马克龙为何从鸽派变为鹰派)
+1. [撒贝宁带龙凤胎出行](https://so.toutiao.com/search?keyword=撒贝宁带龙凤胎出行)
+1. [315后阜阳市委市政府连夜开专题会](https://so.toutiao.com/search?keyword=315后阜阳市委市政府连夜开专题会)
+1. [新冠感染与认知功能下降存在相关性](https://so.toutiao.com/search?keyword=新冠感染与认知功能下降存在相关性)
+1. [专家：贵州“金字塔”是自然形成](https://so.toutiao.com/search?keyword=专家：贵州“金字塔”是自然形成)
+1. [今年高校毕业生将超1170万人](https://so.toutiao.com/search?keyword=今年高校毕业生将超1170万人)
+1. [台退将谈美国特种部队常驻台湾传闻](https://so.toutiao.com/search?keyword=台退将谈美国特种部队常驻台湾传闻)
+1. [修图风波后威廉王子首谈凯特王妃](https://so.toutiao.com/search?keyword=修图风波后威廉王子首谈凯特王妃)
+1. [男子景区写日本国歌4字引游客怒斥](https://so.toutiao.com/search?keyword=男子景区写日本国歌4字引游客怒斥)
+1. [男子网购彩票中千万大奖案一审宣判](https://so.toutiao.com/search?keyword=男子网购彩票中千万大奖案一审宣判)
+1. [王曼昱夺WTT新加坡大满贯女单冠军](https://so.toutiao.com/search?keyword=王曼昱夺WTT新加坡大满贯女单冠军)
+1. [布伦森谈欧文绝杀：这球也太难了吧](https://so.toutiao.com/search?keyword=布伦森谈欧文绝杀：这球也太难了吧)
+1. [欧文压哨绝杀 独行侠主场险胜掘金](https://so.toutiao.com/search?keyword=欧文压哨绝杀+独行侠主场险胜掘金)
+1. [女孩一把将小男孩从高处推下](https://so.toutiao.com/search?keyword=女孩一把将小男孩从高处推下)
+1. [华为纯血鸿蒙将于四季度向用户发布](https://so.toutiao.com/search?keyword=华为纯血鸿蒙将于四季度向用户发布)
+1. [金价下跌了](https://so.toutiao.com/search?keyword=金价下跌了)
+1. [足金商品有哪些坑](https://so.toutiao.com/search?keyword=足金商品有哪些坑)
+1. [奸杀女童恶魔29年后被执行死刑](https://so.toutiao.com/search?keyword=奸杀女童恶魔29年后被执行死刑)
+1. [小伙与老人起冲突被劝动手就麻烦了](https://so.toutiao.com/search?keyword=小伙与老人起冲突被劝动手就麻烦了)
+1. [我国核医学开拓者之一周前教授逝世](https://so.toutiao.com/search?keyword=我国核医学开拓者之一周前教授逝世)
+1. [7名大学生持铁棍追打中学生已被抓](https://so.toutiao.com/search?keyword=7名大学生持铁棍追打中学生已被抓)
+1. [淀粉肠商家直播2小时吃10根淀粉肠](https://so.toutiao.com/search?keyword=淀粉肠商家直播2小时吃10根淀粉肠)
 1. [俄总统选举投票率已过半](https://so.toutiao.com/search?keyword=俄总统选举投票率已过半)
 1. [前联合国官员称从小被教育要憎恨中国](https://so.toutiao.com/search?keyword=前联合国官员称从小被教育要憎恨中国)
-1. [4男女混租3个月后留满屋垃圾](https://so.toutiao.com/search?keyword=4男女混租3个月后留满屋垃圾)
-1. [钧评：美用SpaceX建间谍网威胁世界](https://so.toutiao.com/search?keyword=钧评：美用SpaceX建间谍网威胁世界)
 1. [被害男生父亲怀疑杀人埋尸有帮凶](https://so.toutiao.com/search?keyword=被害男生父亲怀疑杀人埋尸有帮凶)
-1. [武汉赏樱点否认提供梯子拍照](https://so.toutiao.com/search?keyword=武汉赏樱点否认提供梯子拍照)
-1. [洪金宝怒怼说成龙老的网友](https://so.toutiao.com/search?keyword=洪金宝怒怼说成龙老的网友)
 1. [官方通报初中生被同学杀害：将惩处](https://so.toutiao.com/search?keyword=官方通报初中生被同学杀害：将惩处)
 1. [三岁半孙子每天给开公交的爷爷送饭](https://so.toutiao.com/search?keyword=三岁半孙子每天给开公交的爷爷送饭)
-1. [315后阜阳市委市政府连夜开专题会](https://so.toutiao.com/search?keyword=315后阜阳市委市政府连夜开专题会)
 1. [遇害男孩家属：孩子经常要钱才上学](https://so.toutiao.com/search?keyword=遇害男孩家属：孩子经常要钱才上学)
 1. [美国男子水下生活百天生理年龄减少](https://so.toutiao.com/search?keyword=美国男子水下生活百天生理年龄减少)
-1. [用劣质槽头肉企业负责人道歉](https://so.toutiao.com/search?keyword=用劣质槽头肉企业负责人道歉)
 1. [邯郸村民试挖坑：6小时只能挖1米深](https://so.toutiao.com/search?keyword=邯郸村民试挖坑：6小时只能挖1米深)
 1. [航拍雅江山火：夜幕下火线连成长龙](https://so.toutiao.com/search?keyword=航拍雅江山火：夜幕下火线连成长龙)
-1. [央媒评淀粉肠塌房](https://so.toutiao.com/search?keyword=央媒评淀粉肠塌房)
 1. [俄机构调查：普京支持率高达82%](https://so.toutiao.com/search?keyword=俄机构调查：普京支持率高达82%)
-1. [王曼昱夺WTT新加坡大满贯女单冠军](https://so.toutiao.com/search?keyword=王曼昱夺WTT新加坡大满贯女单冠军)
-1. [撒贝宁带龙凤胎出行](https://so.toutiao.com/search?keyword=撒贝宁带龙凤胎出行)
-1. [老人出摊卖淀粉肠无人问津](https://so.toutiao.com/search?keyword=老人出摊卖淀粉肠无人问津)
-1. [老婆想穿小裙子 老公默默擦2小时鞋](https://so.toutiao.com/search?keyword=老婆想穿小裙子+老公默默擦2小时鞋)
-1. [货车超载500%以上 蛇形走位后侧翻](https://so.toutiao.com/search?keyword=货车超载500%以上+蛇形走位后侧翻)
-1. [修图风波后威廉王子首谈凯特王妃](https://so.toutiao.com/search?keyword=修图风波后威廉王子首谈凯特王妃)
 1. [最年轻俄总统候选人刚过完40岁生日](https://so.toutiao.com/search?keyword=最年轻俄总统候选人刚过完40岁生日)
 1. [欧阳夏丹已入驻B站](https://so.toutiao.com/search?keyword=欧阳夏丹已入驻B站)
 1. [千余人奔赴雅江山火现场扑救](https://so.toutiao.com/search?keyword=千余人奔赴雅江山火现场扑救)
 1. [俄乌冲突之下俄罗斯民众过得如何](https://so.toutiao.com/search?keyword=俄乌冲突之下俄罗斯民众过得如何)
-1. [新能源车行驶途中突起火被消防扑灭](https://so.toutiao.com/search?keyword=新能源车行驶途中突起火被消防扑灭)
-1. [笔口罩水杯是怎么变成作弊神器的](https://so.toutiao.com/search?keyword=笔口罩水杯是怎么变成作弊神器的)
 1. [江西省考被曝有考生作弊 公安介入](https://so.toutiao.com/search?keyword=江西省考被曝有考生作弊+公安介入)
-1. [特朗普：乌克兰必须是一个小骰子](https://so.toutiao.com/search?keyword=特朗普：乌克兰必须是一个小骰子)
-1. [法媒：马克龙为何从鸽派变为鹰派](https://so.toutiao.com/search?keyword=法媒：马克龙为何从鸽派变为鹰派)
-1. [男子网购彩票中千万大奖案一审宣判](https://so.toutiao.com/search?keyword=男子网购彩票中千万大奖案一审宣判)
-1. [专家：贵州“金字塔”是自然形成](https://so.toutiao.com/search?keyword=专家：贵州“金字塔”是自然形成)
-1. [金价下跌了](https://so.toutiao.com/search?keyword=金价下跌了)
-1. [今年高校毕业生将超1170万人](https://so.toutiao.com/search?keyword=今年高校毕业生将超1170万人)
 1. [医生提醒司美格鲁肽注射要循序渐进](https://so.toutiao.com/search?keyword=医生提醒司美格鲁肽注射要循序渐进)
-1. [内蒙古一公安局副局长因公牺牲](https://so.toutiao.com/search?keyword=内蒙古一公安局副局长因公牺牲)
-1. [小伙与老人起冲突被劝动手就麻烦了](https://so.toutiao.com/search?keyword=小伙与老人起冲突被劝动手就麻烦了)
-1. [新冠感染与认知功能下降存在相关性](https://so.toutiao.com/search?keyword=新冠感染与认知功能下降存在相关性)
 1. [律师分析听花酒的国际专利是个啥](https://so.toutiao.com/search?keyword=律师分析听花酒的国际专利是个啥)
-1. [女孩一把将小男孩从高处推下](https://so.toutiao.com/search?keyword=女孩一把将小男孩从高处推下)
 1. [律师谈按摩APP涉黄服务](https://so.toutiao.com/search?keyword=律师谈按摩APP涉黄服务)
-1. [奸杀女童恶魔29年后被执行死刑](https://so.toutiao.com/search?keyword=奸杀女童恶魔29年后被执行死刑)
 1. [专家谈台“天弓三型”导弹阵地曝光](https://so.toutiao.com/search?keyword=专家谈台“天弓三型”导弹阵地曝光)
-1. [淀粉肠摊主称周围同行只剩一两家](https://so.toutiao.com/search?keyword=淀粉肠摊主称周围同行只剩一两家)
 1. [俄称击退所有越境袭击 乌550人丧生](https://so.toutiao.com/search?keyword=俄称击退所有越境袭击+乌550人丧生)
-1. [华为纯血鸿蒙将于四季度向用户发布](https://so.toutiao.com/search?keyword=华为纯血鸿蒙将于四季度向用户发布)
 1. [美学者：大陆没有在寻求两岸危机](https://so.toutiao.com/search?keyword=美学者：大陆没有在寻求两岸危机)
 1. [海马斯为何遭到俄军“猎杀”](https://so.toutiao.com/search?keyword=海马斯为何遭到俄军“猎杀”)
 1. [台名嘴频频造谣污蔑大陆落后遭讽](https://so.toutiao.com/search?keyword=台名嘴频频造谣污蔑大陆落后遭讽)
@@ -68,7 +86,6 @@
 1. [王楚钦4-1战胜梁靖崑夺男单冠军](https://so.toutiao.com/search?keyword=王楚钦4-1战胜梁靖崑夺男单冠军)
 1. [多个网络平台销售假999足金](https://so.toutiao.com/search?keyword=多个网络平台销售假999足金)
 1. [法国不排除未来或介入俄乌冲突现场](https://so.toutiao.com/search?keyword=法国不排除未来或介入俄乌冲突现场)
-1. [联合国批俄在乌东等地举行大选投票](https://so.toutiao.com/search?keyword=联合国批俄在乌东等地举行大选投票)
 1. [女子买淀粉肠创业 还没开始就结束](https://so.toutiao.com/search?keyword=女子买淀粉肠创业+还没开始就结束)
 1. [台名嘴：民进党当局是纸老虎](https://so.toutiao.com/search?keyword=台名嘴：民进党当局是纸老虎)
 1. [密友：凯特对于网络的猜测感到震惊](https://so.toutiao.com/search?keyword=密友：凯特对于网络的猜测感到震惊)
